turn autocomplete off in both bulma app inputs

--- a/index-bulma.html
+++ b/index-bulma.html
@@ -20,6 +20,7 @@
             type="text"
             name="search"
             placeholder="Buscar to-do"
+            autocomplete="off"
           />
         </form>
       </header>
@@ -46,6 +47,7 @@
             type="text"
             name="add"
             id="add"
+            autocomplete="off"
             autofocus
           />
         </form>
