--- a/index-bulma.html
+++ b/index-bulma.html
@@ -26,15 +26,15 @@
       </header>
 
       <ul class="section max-width-370" id="todos-container">
-        <li class="message has-background-warning has-text-dark my-1 p-3 is-flex is-justify-content-space-between is-align-items-center">
-          <span>Assistir Breaking bad</span><i class="fas fa-trash-alt is-clickable"></i>
+        <!-- <li class="message has-background-warning has-text-dark my-1 p-3 is-flex is-justify-content-space-between is-align-items-center">
+          <span>Assistir Breaking bad</span><i class="fas fa-trash-alt is-clickable delete-item" ></i>
         </li>
         <li class="message has-background-warning has-text-dark my-1 p-3 is-flex is-justify-content-space-between is-align-items-center">
-          <span>Planejar aulas</span><i class="fas fa-trash-alt is-clickable"></i>
+          <span>Planejar aulas</span><i class="fas fa-trash-alt is-clickable delete-item"></i>
         </li>
         <li class="message has-background-warning has-text-dark my-1 p-3 is-flex is-justify-content-space-between is-align-items-center">
-          <span>Fazer exercícios físicos</span><i class="fas fa-trash-alt is-clickable"></i>
-        </li>
+          <span>Fazer exercícios físicos</span><i class="fas fa-trash-alt is-clickable delete-item"></i>
+        </li> -->
       </ul>
 
       <div class="section has-text-centered max-width-370">
