remove commented lis from index.html

--- a/index.html
+++ b/index.html
@@ -25,17 +25,7 @@
         </form>
       </header>
 
-      <ul class="section max-width-370" id="todos-container">
-        <!-- <li class="message has-background-warning has-text-dark my-1 p-3 is-flex is-justify-content-space-between is-align-items-center">
-          <span>Assistir Breaking bad</span><i class="fas fa-trash-alt is-clickable delete-item" ></i>
-        </li>
-        <li class="message has-background-warning has-text-dark my-1 p-3 is-flex is-justify-content-space-between is-align-items-center">
-          <span>Planejar aulas</span><i class="fas fa-trash-alt is-clickable delete-item"></i>
-        </li>
-        <li class="message has-background-warning has-text-dark my-1 p-3 is-flex is-justify-content-space-between is-align-items-center">
-          <span>Fazer exercícios físicos</span><i class="fas fa-trash-alt is-clickable delete-item"></i>
-        </li> -->
-      </ul>
+      <ul class="section max-width-370" id="todos-container"></ul>
 
       <div class="section has-text-centered max-width-370">
         <form id='form-add-todo'>
